--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <p><span>Sábado</span><span>08:00 - 22:00</span></p>
                         <p><span>Domingo</span><span>09:00 - 18:00</span></p>
                     </div>
-                    <div class="addres">
+                    <div class="address">
                         <p><strong>Endereço</strong></p>
                         <p>Rua das Flores, 123 - Centro</p>
                         <p>São Paulo, SP</p>
