--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <section class="contact">
             <div class="container contact-box">
-                <div class="contact-text">
+                <div class="contact-text column">
                     <h2>Horário de Funcionamento</h2>
                     <div class="hours">
                         <p><span>Segunda a Sexta</span><span>07:00 - 20:00</span></p>
@@ -99,7 +99,7 @@
                     </div>
                     <a href="#" class="btn">Ver no Mapa</a>
                 </div>
-                <div class="contact-image">
+                <div class="contact-image column">
                     <img src="/images/aurora-horario.jpg" alt="Café sendo servido">
                 </div>
             </div>
@@ -110,11 +110,11 @@
     
    <footer class="footer">
         <div class="container footer-inner">
-            <div class="footer-brand">
+            <div class="footer-brand column">
                 <h3 class="logo">Café Aurora</h3>
                 <p>O melhor café da Cidade desde 2015</p>
             </div>
-            <div class="footer-social">
+            <div class="footer-social column">
                 <div class="social-icons">
                     <a href="#"><img src="images/instagram.png" alt="Link para Instagram"></a>
                     <a href="#"><img src="images/facebook.png" alt="Link para Facebook"></a>
